--- a/content-style.css
+++ b/content-style.css
@@ -98,10 +98,6 @@ path[fill="#000000"],
   stroke: #fff !important;
 }
 
-.jss22 {
-  background-color: #1e1e1e !important;
-}
-
 .comment-feed,
 .jss197,
 .comment {
@@ -121,4 +117,9 @@ path[fill="#000000"],
 
 #mouse-over-popover > div.MuiPaper-root.MuiPopover-paper > div div, span {
 	color: rgb(217,217,217) !important;
+}
+
+/*Search Bar*/
+div#root > div > div > div:nth-child(2) > div > div > div > div > form {
+    background-color: rgb(32, 35, 39) !important;
 }
